force-app/main/default/objects/Buying_History_19_20__c/Buying_History_19_20__c.object-meta.xml
<CustomObject>
    <label>Buying History 19-20</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Buying History 17-18 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buying Histories 19-20</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>