force-app/main/default/objects/Buying_History_19_20__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Buying Histories 19-20</relationshipLabel>
    <relationshipName>Buying_Histories_19_20</relationshipName>
    <type>Lookup</type>
</CustomField>