force-app/main/default/objects/Buying_History_19_20__c/fields/X2019_Lost_Count__c.field-meta.xml
<CustomField>
    <fullName>X2019_Lost_Count__c</fullName>
    <label>2019 Lost Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>