force-app/main/default/objects/Buying_History_19_20__c/fields/X2020_Lost_Value__c.field-meta.xml
<CustomField>
    <fullName>X2020_Lost_Value__c</fullName>
    <label>2020 Lost Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>